<resources>
    <string name="app_name">Fake Call</string>
    <string name="timer">Timer</string>
    <string name="contact_icon" translatable="false">contact icon</string>
    <string name="view_contact_photos">View contact photos</string>
    <string name="settings">Settings</string>
    <string name="message_read_contacts_failed">To show contact photos this app needs to be able to read the contacts stored on this device.</string>
    <string name="clear_call_history">Clear call history</string>
    <string name="history_show_duplicates_title">Show phone number duplicates</string>
    <string name="history_show_duplicates_summary">Allow the same phone number to be shown multiple times in call history</string>
    <string name="fake_call_settings">Fake Call settings</string>
    <string name="pick_contact">Pick contact</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="apache20Text" translatable="false">Apache License 2.0</string>
    <string name="apache20Libs" translatable="false">androidx • material-components</string>
    <string name="mitText" translatable="false">MIT License</string>
    <string name="mitLibs" translatable="false">oneui-core • oneui-design</string>
    <string name="about_fake_call">About Fake Call</string>
    <string name="github_repo" translatable="false">Konsl/fake-call</string>
    <string name="title_phone_account_disabled">Calling account might be disabled</string>
    <string name="message_phone_account_disabled">To use this app you might have to first enable the corresponding calling account in your phone app.</string>
    <string name="help">Help</string>
    <string-array name="timer_lengths">
        <item>Now</item>
        <item>5 Seconds</item>
        <item>10 Seconds</item>
        <item>15 Seconds</item>
        <item>30 Seconds</item>
        <item>1 Minute</item>
        <item>2 Minutes</item>
        <item>5 Minutes</item>
        <item>10 Minutes</item>
        <item>15 Minutes</item>
        <item>30 Minutes</item>
        <item>1 Hour</item>
        <item>2 Hours</item>
    </string-array>
</resources>
