<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AppCompatResource">

    <item
        android:id="@+id/menu_main_enable_pictures"
        android:title="@string/view_contact_photos"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_clear_history"
        android:title="@string/clear_call_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_help"
        android:title="@string/help"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_main_settings"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>