<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory>

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="history_show_duplicates"
            android:summary="@string/history_show_duplicates_summary"
            android:title="@string/history_show_duplicates_title" />

    </PreferenceCategory>

    <PreferenceCategory>

        <PreferenceScreen
            android:key="about_app"
            android:title="@string/about_fake_call">

            <intent
                android:targetClass="com.konsl.fakecall.AboutActivity"
                android:targetPackage="com.konsl.fakecall" />

        </PreferenceScreen>

    </PreferenceCategory>

</PreferenceScreen>